--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "hbs": "^4.1.2",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
