--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "server-start": "concurrently \"npm run client-start\" \"nodemon index.js\"",
-    "server-build": "concurrently \"npm run client-build\" \"node index.js\"",
+    "server-build": "concurrently \"npm run client-build\" \"nodemon index.js\"",
     "start": "node index.js",
     "dev": "nodemon index.js",
     "client-start": "npm run start --prefix client",
@@ -28,9 +28,22 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.6.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
-    "concurrently": "^6.2.1"
+    "@babel/core": "^7.15.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
+    "@babel/plugin-transform-arrow-functions": "^7.14.5",
+    "@babel/plugin-transform-async-to-generator": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.4",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/register": "^7.15.3",
+    "@babel/runtime": "^7.15.4",
+    "concurrently": "^6.2.1",
+    "ignore-styles": "^5.0.1"
   }
 }
