--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 /node_modules
 client/node_modules/
 client/dist/
+client/package.json
+client/package-lock.json
+client/webpack.config.js
+old/
 .env
