--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-router-dom": "^5.2.1",
     "redux": "^4.1.1",
     "redux-saga": "^1.1.3",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
