--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "outer-client-build": "cross-env NODE_ENV=production webpack --mode production",
     "outer-client-dev": "cross-env NODE_ENV=production webpack --mode production --watch",
     "server-outer-start": "concurrently \"npm run outer-client-start\" \"nodemon index.js\"",
+    "server-outer-dev": "concurrently \"npm run outer-client-dev\" \"nodemon index.js\"",
     "server-outer-build": "concurrently \"npm run outer-client-build\" \"node index.js\""
   },
   "keywords": [],
